# hamdis

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
contrib/utilities/: indent  indent-all  indent_common.sh
examples/: mask_map_udgrade.py  pointing_list_prep.py  random_map_interp.py
include/: cgsunits.h  hamdis.h  hamio.h  hamp.h  hampix.h  hampixp.h  hamsk.h  hamvec.h
tests/: CMakeLists.txt  hamdis_tests.cc  hamp_tests.cc  hampix_tests.cc  hampixp_tests.cc  hamvec_tests.cc  node_tests.cc  pointing_healpix_npower1.txt  timer_tests.cc
